# stockholm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: stockholmConfig.cmake.in
include/: stockholm.hpp
include/stockholm/: format.hpp  pattern.hpp  selector.hpp  util.hpp  yarn.hpp
src/: main.cpp
src/include/: pattern.hpp  selector.hpp  util.hpp  yarn.hpp
test/: test.cpp
test/unit/: test_format.cpp  test_pattern_basic.cpp  test_pattern_quantifiers.cpp  test_yarn.cpp
